# high-performance-limit-order-book-matching-engine

./: CMakeLists.txt  README.md
bench/: bench_orderbook.cpp
include/LOB/: Book.h  FlatHashMap.h  Level.h  Limit.h  Macros.h  Order.h  SlabPool.h  Trade.h  Types.h
src/: Book.cpp  Level.cpp  Limit.cpp  Order.cpp
test/: LOBTest.cpp
